--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-paper": "^5.10.6",
+    "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.0",
     "yup": "^1.3.1"
   },
   "devDependencies": {
