--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/blur": "^4.3.2",
     "@react-navigation/bottom-tabs": "^7.0.0-alpha.5",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.0",
     "expo": "~49.0.12",
+    "expo-blur": "~12.4.1",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
-    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-paper": "^5.10.6",
@@ -25,6 +26,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.0",
+    "typescript": "^5.1.3",
     "yup": "^1.3.1"
   },
   "devDependencies": {
