--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "Fitness",
+    "name": "Power",
     "slug": "powerGreen",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/ajtomo.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/wfundo.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#fff"
     },
@@ -19,13 +19,13 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/ajtomo.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#1F212C"
       },
       "package": "com.arnaldotomo.powerGreen"
     },
     "web": {
-      "favicon": "./assets/spa.png"
+      "favicon": "./assets/splash.png"
     },
     "extra": {
       "eas": {
